working on mobile height issues

--- a/src/style.css
+++ b/src/style.css
@@ -21,22 +21,22 @@
 }
 
 html {
-  height: 100svh;
+  height: auto;
 }
 
 body {
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 	background: linear-gradient(-45deg, #ffffff, crimson, #087ea8, #7120b3);
   background-size: 400% 400%;
 	animation: backgroundAnim 15s ease infinite;
-  width: screen;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 section{
-  width: 100%;
-  height: 100%;
+  height: 100svh;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -44,8 +44,8 @@ section{
 }
 
 #app {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 @keyframes backgroundAnim {
